<resources>
    <string name="app_name">Gradu</string>
    <string name="title_activity_test">test</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_msg">Welcome, </string>
    <string name="id_hint">Hisnet ID</string>
    <string name="pw_hint">Hisnet Password</string>
    <string name="home_credit_guide">총 이수학점</string>
    <string name="home_credit_hint">언제 졸업하지?</string>
    <string name="home_credit_title">이수학점</string>
    <string name="home_credit_subtitle">더 자세히 알아보기</string>
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_version">ver 1.0</string>
    <string name="invalid_id_pw">학번과 비밀번호를 확인해주세요.</string>
    <string name="major_1">1전공</string>
    <string name="major_2">2전공</string>
    <string name="refinement">교양</string>
    <string name="majoring">전공중입니다</string>
    <string name="major_map_title">한 눈에 보는 전공</string>
    <string name="major_map_subtitle">전공흐름도 보기</string>
    <string name="refinement_subtitle">교양있는 대학생, 나야 나</string>
    <string name="refinement_credit_title">교양학점</string>
    <string name="free_refinement">자유 이수</string>
    <string name="english_refinement">영어 이수학점</string>
    <string name="login_failure">아이디와 비밀번호를 확인해주세요.</string>
    <string name="simulation_title">수강 시뮬레이션</string>
    <string name="simulation_subtitle">미리 수강신청해보기</string>
    <string-array name="semester_array">
        <item>2019-1학기</item>
        <item>2019-2학기</item>
        <item>2020-1학기</item>
        <item>2020-2학기</item>
        <item>2021-1학기</item>
        <item>2021-2학기</item>
    </string-array>
</resources>
