<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_margin="@dimen/space_large"
            android:text="@string/home_credit_guide"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_home_subtitle"/>

        <TextView
            android:id="@+id/tv_home_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black_opacity_60"
            android:layout_marginLeft="@dimen/space_x_small"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_home_title"
            android:text="@string/home_credit_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_home_title" />

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/cp_home_graph"
            android:layout_width="wrap_content"
            android:layout_height="242dp"
            app:cs_lock_enabled="true"
            app:cs_disable_progress_glow="true"
            app:cs_circle_stroke_width="@dimen/circle_width_median"
            app:layout_constraintTop_toBottomOf="@id/tv_home_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_credit_title"/>

        <TextView
            android:id="@+id/tv_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_regular"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            tools:text="6학기"
            app:layout_constraintLeft_toLeftOf="@id/cp_home_graph"
            app:layout_constraintRight_toRightOf="@id/cp_home_graph"
            app:layout_constraintBottom_toTopOf="@id/tv_name"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_bold"
            android:textSize="17sp"
            android:includeFontPadding="false"
            tools:text="그래두"
            app:layout_constraintLeft_toLeftOf="@id/cp_home_graph"
            app:layout_constraintRight_toRightOf="@id/cp_home_graph"
            app:layout_constraintBottom_toTopOf="@id/tv_home_credit"/>

        <TextView
            android:id="@+id/tv_home_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_bold"
            android:textSize="38sp"
            tools:text="114"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="@id/cp_home_graph"
            app:layout_constraintLeft_toLeftOf="@id/cp_home_graph"
            app:layout_constraintRight_toRightOf="@id/cp_home_graph"
            app:layout_constraintBottom_toBottomOf="@id/cp_home_graph"/>

        <TextView
            android:id="@+id/tv_home_total_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/noto_light"
            android:includeFontPadding="false"
            tools:text="of 140"
            app:layout_constraintLeft_toLeftOf="@id/cp_home_graph"
            app:layout_constraintRight_toRightOf="@id/cp_home_graph"
            app:layout_constraintTop_toBottomOf="@id/tv_home_credit"/>

        <TextView
            android:id="@+id/tv_credit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/space_large"
            android:fontFamily="@font/noto_bold"
            android:text="@string/home_credit_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_credit_subtitle"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom_graphs"/>

        <TextView
            android:id="@+id/tv_credit_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_small"
            android:textSize="11.5sp"
            android:text="@string/home_credit_subtitle"
            app:layout_constraintLeft_toRightOf="@id/tv_credit_title"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_credit_title"/>

        <LinearLayout
            android:id="@+id/ll_bottom_graphs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_large"
            android:weightSum="3"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <include
                android:id="@+id/cl_major_one"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/space_small"
                android:layout_weight="1"
                layout="@layout/layout_bottom_graph"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/cl_major_two"
                app:layout_constraintTop_toBottomOf="@id/tv_credit_title"/>

            <include
                android:id="@+id/cl_major_two"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/space_small"
                android:layout_marginEnd="@dimen/space_small"
                layout="@layout/layout_bottom_graph"
                app:layout_constraintLeft_toRightOf="@id/cl_major_one"
                app:layout_constraintTop_toBottomOf="@id/tv_credit_title"
                app:layout_constraintRight_toLeftOf="@id/cl_refinement"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <include
                android:id="@+id/cl_refinement"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/space_median"
                layout="@layout/layout_bottom_graph"
                app:layout_constraintLeft_toRightOf="@id/cl_major_two"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_credit_title"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>